Update uses of root locale in other field mappers